chore: update docs and build scripts for bbs specific artifacts
Signed-off-by: Akiff Manji <akiff.manji@quartech.com>

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -17,5 +17,5 @@ RUN curl -sSL https://install.python-poetry.org | python3 - \
 
 COPY pyproject.toml poetry.lock ./
 RUN poetry config virtualenvs.create false \
-    && poetry install --no-root --no-interaction --all-extras \
+    && poetry install --no-root --no-interaction -E "askar didcommv2" \
     && rm -rf /root/.cache/pypoetry
