--- a/docker/Dockerfile.demo
+++ b/docker/Dockerfile.demo
@@ -14,7 +14,8 @@ RUN pip install --no-cache-dir poetry
 
 ADD README.md pyproject.toml poetry.lock ./
 
-RUN poetry install --no-root --no-directory -E "askar"
+ARG all_extras=0
+RUN if ! [ -z ${all_extras} ]; then poetry install --no-root --no-directory --all-extras; else poetry install --no-root --no-directory -E "askar didcommv2"; fi
 
 ADD aries_cloudagent ./aries_cloudagent
 ADD scripts ./scripts
