--- a/docker/Dockerfile.test
+++ b/docker/Dockerfile.test
@@ -14,7 +14,8 @@ RUN pip install --no-cache-dir poetry
 ADD ./README.md pyproject.toml ./poetry.lock ./
 RUN mkdir aries_cloudagent && touch aries_cloudagent/__init__.py
 
-RUN poetry install --no-directory -E "askar didcommv2" --with=dev
+ARG all_extras=0
+RUN if ! [ -z ${all_extras} ]; then poetry install --no-directory --all-extras --with=dev; else poetry install --no-directory -E "askar didcommv2" --with=dev; fi
 
 ADD . .
 
