--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,9 +55,11 @@ indy-credx= { version = "~1.1.1", optional = true }
 indy-vdr= { version = "~0.4.0", optional = true }
 anoncreds= { version = "0.2.0", optional = true }
 
+# bbs
+ursa-bbs-signatures = { version = "~1.0.1", optional = true }
+
 # didcommv2
 didcomm-messaging = {version = "^0.1.1a0", optional = true }
-
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "~3.7.0"
@@ -84,6 +86,9 @@ askar = [
       "indy-credx",
       "indy-vdr",
       "anoncreds"
+]
+bbs = [
+    "ursa-bbs-signatures"
 ]
 didcommv2 = [
     "didcomm-messaging"
@@ -125,8 +130,8 @@ markers = [
     "indy: Tests specifically relating to Hyperledger Indy SDK support",
     "indy_credx: Tests specifically relating to Indy-Credx support",
     "indy_vdr: Tests specifically relating to Indy-VDR support",
-    "postgres: Tests relating to the postgres storage plugin for Indy",
-]
+    "ursa_bbs_signatures: Tests specificaly relating to BBS Signatures support",
+    "postgres: Tests relating to the postgres storage plugin for Indy"]
 junit_family = "xunit1"
 asyncio_mode = "auto"
 
