Change branch names in Snyk GHA to renamed branches
Signed-off-by: Stephen Curran <swcurran@gmail.com>

--- a/.github/workflows/snyk-lts.yml
+++ b/.github/workflows/snyk-lts.yml
@@ -4,8 +4,8 @@ on:
   push:
     # These branches represent the LTS releases
     branches:
-      - 0.12.x
-      - 0.11.x
+      - 0.12.lts
+      - 0.11.lts
     paths:
       - aries_cloudagent/**
       - docker/**
