Enable `linux/arm64` docker builds
* `1.0.0rc6` resolved build issues for `linux/arm64`

Signed-off-by: Robbie Blaine <robbieblaine.rb@gmail.com>

--- a/.github/workflows/nigthly.yml
+++ b/.github/workflows/nigthly.yml
@@ -51,4 +51,4 @@ jobs:
         tag: ["nightly-${{needs.setup_and_check_pub.outputs.date}}", nightly]
     with:
       tag: ${{ matrix.tag }}
-      platforms: "linux/amd64"
+      platforms: "linux/amd64,linux/arm64"
