--- a/.github/workflows/bdd-interop-tests.yml
+++ b/.github/workflows/bdd-interop-tests.yml
@@ -1,6 +1,9 @@
 name: BDD Interop Integration Tests
 
 on:
+  schedule:
+    - cron: '0 0 * * *'
+  workflow_dispatch:
   pull_request:
     branches:
       - main
@@ -25,6 +28,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Check if PR is a release
+        uses: ./.github/actions/is-release
+        id: check_if_release
       - name: Request GitHub API for PR data
         uses: octokit/request-action@v2.x
         env:
@@ -32,7 +38,7 @@ jobs:
         id: get_pr_data
         with:
           route: GET /repos/${{ github.event.repository.full_name }}/pulls/${{ github.event.number }}
-      - name: Run BDD Interop Tests
+      - name: Prepare Interop Tests
         run: |
           # Get AATH 
           git clone https://github.com/hyperledger/aries-agent-test-harness.git
@@ -42,5 +48,14 @@ jobs:
           cat aries-agent-test-harness/aries-backchannels/acapy/requirements-main.txt
           cd aries-agent-test-harness
           ./manage build -a acapy-main
+      - name: Run PR Interop Tests
+        if: (steps.check_if_release.outputs.is_release != 'true' && github.event_name == 'pull_request')
+        run: |
+          cd aries-agent-test-harness
           NO_TTY=1 LEDGER_URL_CONFIG=http://test.bcovrin.vonx.io TAILS_SERVER_URL_CONFIG=https://tails.vonx.io ./manage run -d acapy-main -t @critical -t ~@wip -t ~@T004-RFC0211 -t ~@DidMethod_orb -t ~@Transport_NoHttpOutbound
+      - name: Run Release or Nightly Interop Tests
+        if: (steps.check_if_release.outputs.is_release == 'true' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch')
+        run: |
+          cd aries-agent-test-harness
+          NO_TTY=1 LEDGER_URL_CONFIG=http://test.bcovrin.vonx.io TAILS_SERVER_URL_CONFIG=https://tails.vonx.io ./manage run -d acapy-main -t @AcceptanceTest -t ~@wip -t ~@T004-RFC0211 -t ~@DidMethod_orb -t ~@Transport_NoHttpOutbound
 
