--- a/.github/workflows/scenario-integration-tests.yml
+++ b/.github/workflows/scenario-integration-tests.yml
@@ -1,6 +1,9 @@
 name: Scenario Integration Tests
 
 on:
+  schedule:
+    - cron: '0 0 * * *'
+  workflow_dispatch:
   pull_request:
     branches:
       - main
